--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,39 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppMovil">
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="Login"
             android:theme="@style/Theme.AppMovil">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false"
+            android:label="Home"
+            android:theme="@style/Theme.AppMovil" />
+            
+        <activity
+            android:name=".ProductosActivity"
+            android:exported="false"
+            android:label="Productos"
+            android:theme="@style/Theme.AppMovil" />
+            
+        <activity
+            android:name=".ConsultaActivity"
+            android:exported="false"
+            android:label="Consulta"
+            android:theme="@style/Theme.AppMovil" />
+            
+        <activity
+            android:name=".IngresoActivity"
+            android:exported="false"
+            android:label="Ingreso"
+            android:theme="@style/Theme.AppMovil" />
     </application>
 
 </manifest>
