--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppMovil">
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.activities.MainActivity"
             android:exported="true"
-            android:label="Login"
+            android:label="Main"
             android:theme="@style/Theme.AppMovil">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,31 +27,37 @@
         </activity>
         
         <activity
-            android:name=".HomeActivity"
+            android:name=".ui.activities.LoginActivity"
+            android:exported="false"
+            android:label="Login"
+            android:theme="@style/Theme.AppMovil" />
+        
+        <activity
+            android:name=".ui.activities.HomeActivity"
             android:exported="false"
             android:label="Home"
             android:theme="@style/Theme.AppMovil" />
             
         <activity
-            android:name=".ProductosActivity"
+            android:name=".ui.activities.ProductosActivity"
             android:exported="false"
             android:label="Productos"
             android:theme="@style/Theme.AppMovil" />
             
         <activity
-            android:name=".ConsultaActivity"
+            android:name=".ui.activities.ConsultaActivity"
             android:exported="false"
             android:label="Consulta"
             android:theme="@style/Theme.AppMovil" />
             
         <activity
-            android:name=".IngresoActivity"
+            android:name=".ui.activities.IngresoActivity"
             android:exported="false"
             android:label="Ingreso"
             android:theme="@style/Theme.AppMovil" />
             
         <activity
-            android:name=".DetalleProductoActivity"
+            android:name=".ui.activities.DetalleProductoActivity"
             android:exported="false"
             android:label="Detalle Producto"
             android:theme="@style/Theme.AppMovil" />
