avance: pantallas listas e integración con backend (Pazapp)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,39 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppMovil">
         <activity
-            android:name=".LoginActivity"
+            android:name=".MainActivity"
             android:exported="true"
-            android:label="Login"
+            android:label="@string/app_name"
             android:theme="@style/Theme.AppMovil">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity
-            android:name=".HomeActivity"
-            android:exported="false"
-            android:label="Home"
-            android:theme="@style/Theme.AppMovil" />
-            
-        <activity
-            android:name=".ProductosActivity"
-            android:exported="false"
-            android:label="Productos"
-            android:theme="@style/Theme.AppMovil" />
-            
-        <activity
-            android:name=".ConsultaActivity"
-            android:exported="false"
-            android:label="Consulta"
-            android:theme="@style/Theme.AppMovil" />
-            
-        <activity
-            android:name=".IngresoActivity"
-            android:exported="false"
-            android:label="Ingreso"
-            android:theme="@style/Theme.AppMovil" />
     </application>
 
 </manifest>
