--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,9 +39,9 @@
             android:theme="@style/Theme.AppMovil" />
             
         <activity
-            android:name=".ui.activities.ProductosActivity"
+            android:name=".ui.activities.SalidaActivity"
             android:exported="false"
-            android:label="Productos"
+            android:label="Salida"
             android:theme="@style/Theme.AppMovil" />
             
         <activity
