feat: corregir duplicados y agregar edicion, validacion ID e historial
Correcciones:

- Eliminadas lineas duplicadas y mensajes de confirmacion duplicados en eliminar

Nuevas funcionalidades:

- Agregado boton Editar en DetalleProducto para acceder al modo edicion

- Implementada validacion de ID unico al crear productos

- Creado sistema de historial de movimientos con nueva entidad MovimientoInventario

- Agregada pantalla Historial accesible desde Home con filtros por tipo

- Implementado registro automatico de movimientos al crear productos y registrar salidas

- Agregado boton compartir historial que envia ultimos 5 movimientos por WhatsApp

- Actualizada base de datos a version 2 con tabla de movimientos

- Modificado ProductoViewModel para crear movimientos automaticamente

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,9 +39,9 @@
             android:theme="@style/Theme.AppMovil" />
             
         <activity
-            android:name=".ui.activities.ProductosActivity"
+            android:name=".ui.activities.SalidaActivity"
             android:exported="false"
-            android:label="Productos"
+            android:label="Salida"
             android:theme="@style/Theme.AppMovil" />
             
         <activity
@@ -60,6 +60,12 @@
             android:name=".ui.activities.DetalleProductoActivity"
             android:exported="false"
             android:label="Detalle Producto"
+            android:theme="@style/Theme.AppMovil" />
+            
+        <activity
+            android:name=".ui.activities.HistorialActivity"
+            android:exported="false"
+            android:label="Historial"
             android:theme="@style/Theme.AppMovil" />
     </application>
 
