Agregar soporte para imagenes desde URL, sincronizacion masiva y mejoras en UI - Implementado soporte para cargar imagenes desde URL usando Coil en DetalleProductoScreen - Agregado boton de sincronizacion masiva en ConsultaScreen que sincroniza todos los productos locales con el servidor - Mejorada UX en HistorialScreen con boton volver fijo en la parte inferior - Agregado metodo getAllProductosSuspend en ProductoDao para sincronizacion masiva - Integracion completa con MockAPI.io para CRUD de productos

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,10 @@ viewmodel = "2.8.7"
 livedata = "2.8.7"
 appcompat = "1.7.0"
 activity = "1.9.2"
+retrofit = "2.9.0"
+gson = "2.10.1"
+okhttp = "4.12.0"
+coil = "2.5.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -36,6 +40,12 @@ androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle
 androidx-lifecycle-livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "livedata" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-activity = { group = "androidx.activity", name = "activity-ktx", version.ref = "activity" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
