--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -66,6 +67,12 @@
             android:name=".ui.activities.HistorialActivity"
             android:exported="false"
             android:label="Historial"
+            android:theme="@style/Theme.AppMovil" />
+            
+        <activity
+            android:name=".ui.activities.ProductosExternosActivity"
+            android:exported="false"
+            android:label="Productos API"
             android:theme="@style/Theme.AppMovil" />
     </application>
 
