--- a/backend/inventory-service/bin/main/application.properties
+++ b/backend/inventory-service/bin/main/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=products-service
-server.port=8081
+spring.application.name=inventory-service
+server.port=8082
 
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
