Entrega final - Evaluación Parcial 4: APK firmado, integración completa con microservicios, pruebas unitarias y documentación actualizada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" android:minSdkVersion="33" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,9 +16,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppMovil">
+        android:theme="@style/Theme.AppMovil"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.activities.LoginActivity"
             android:exported="true"
             android:label="Login"
             android:theme="@style/Theme.AppMovil">
@@ -27,33 +31,51 @@
         </activity>
         
         <activity
-            android:name=".HomeActivity"
+            android:name=".ui.activities.HomeActivity"
             android:exported="false"
             android:label="Home"
             android:theme="@style/Theme.AppMovil" />
             
         <activity
-            android:name=".ProductosActivity"
+            android:name=".ui.activities.ProductosActivity"
             android:exported="false"
             android:label="Productos"
             android:theme="@style/Theme.AppMovil" />
             
         <activity
-            android:name=".ConsultaActivity"
+            android:name=".ui.activities.ConsultaActivity"
             android:exported="false"
             android:label="Consulta"
             android:theme="@style/Theme.AppMovil" />
             
         <activity
-            android:name=".IngresoActivity"
+            android:name=".ui.activities.IngresoActivity"
             android:exported="false"
             android:label="Ingreso"
             android:theme="@style/Theme.AppMovil" />
             
         <activity
-            android:name=".DetalleProductoActivity"
+            android:name=".ui.activities.DetalleProductoActivity"
             android:exported="false"
             android:label="Detalle Producto"
+            android:theme="@style/Theme.AppMovil" />
+            
+        <activity
+            android:name=".ui.activities.ProductosExternosActivity"
+            android:exported="false"
+            android:label="Catálogo Online"
+            android:theme="@style/Theme.AppMovil" />
+            
+        <activity
+            android:name=".ui.activities.SalidaActivity"
+            android:exported="false"
+            android:label="Salida"
+            android:theme="@style/Theme.AppMovil" />
+            
+        <activity
+            android:name=".ui.activities.HistorialActivity"
+            android:exported="false"
+            android:label="Historial"
             android:theme="@style/Theme.AppMovil" />
     </application>
 
